--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<h1>Feeleat- A new way for Feelings</h1>
-							<h2>❛I have feelings too.I am still human. All I want is to be loved❜</h2>
+							<h2>❛I have feelings too. All I want is to be loved...❜</h2>
 							<p></a> <a class="btn btn-primary btn-lg btn-learn">Learn More</a></p>
 						</div>
 					</div>
@@ -126,22 +126,29 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Wiring the Two Worlds</h2>
+					<h2>About Us</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-5 animate-box">
 					<div class="user-frame">
-						<h3>Connecting the gap </h3>
-						<p>xyz. </p>
+						<h3>What to expect: you will know yourself better </h3>
+						<p>This is a website devoted to help people, especially teenagers, aged 14-18, 
+							recovering from eating disorders by providing them with a safe environment 
+							to write down their feelings about their meals and keep a track of their lives. </p>
 					</div>
 				</div>
 				<div class="col-md-7 animate-box">
-					<p>r from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<p> The idea started from the experience of only having an apple for breakfast and thinking that would hold me 
+						till the end of afternoon lectures, ending up being hungry and could not concentrate on the task. </p>
 					<blockquote>
-						<p>Far far away, behind the word mountains, far from the countriee countries Vokalia and Consonantia, there live the blind texts. </p>
+						<p>Eating disorders usually occur to avoid solving the actual causes of anxiety. Teenage girls can easily
+							be pressured into unhealthy dieting to fit in social-standard beauty and feel guilty and self-disgusted 
+							after eating a normal portion of food for people their age.  </p>
 					</blockquote>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<p> We find this is a common problem that people around us just to different extents. The first step of healing is always 
+						to recognize the problem. Thus, keeping a diary about food and your feelings will make eating more like a meaningful 
+						process instead of an inner tug of war.  </p>
 				</div>
 			</div>
 		</div>
@@ -153,7 +160,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Good to Meet you!</h2>
+					<h2>Relax and let's begin...</h2>
 				</div>
 			</div>
 			
