--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<h1>Feeleat- A new way for Feelings</h1>
-							<h2>❛I have feelings too. All I want is to be loved...❜</h2>
+							<h2>❛I have feelings too. I deserve to be loved!❜</h2>
 							<p></a> <a class="btn btn-primary btn-lg btn-learn">Learn More</a></p>
 						</div>
 					</div>
@@ -85,7 +85,9 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Why</h3>
-								<p>Its</p>
+								<p>We find it is a common that people worry about their body shape and causing eating problems. For some teenagers facing eating disorders, they are not willing to talk to others about their thoughts and troubles, 
+									concerning about all the judgement. Using our website, they are safe with their inner-self and hopefully, such writing can help them orgnize 
+									their thoughts. </p>
 							</div>
 						</div>
 					</div>
@@ -97,7 +99,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Who</h3>
-								<p>We care about feelings.</p>
+								<p>Teenagers: aged from 14 to 18</p>
 							</div>
 						</div>
 
@@ -109,7 +111,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Record</h3>
-								<p>Record your feelings and </p>
+								<p>Write your meals, reflect on your feelings, gain a sense of an accomplishment as you look back on the younger you. </p>
 							</div>
 						</div>
 					</div>
@@ -132,10 +134,7 @@
 			<div class="row">
 				<div class="col-md-5 animate-box">
 					<div class="user-frame">
-						<h3>What to expect: you will know yourself better </h3>
-						<p>This is a website devoted to help people, especially teenagers, aged 14-18, 
-							recovering from eating disorders by providing them with a safe environment 
-							to write down their feelings about their meals and keep a track of their lives. </p>
+						<h3>What What inspired us? </h3>
 					</div>
 				</div>
 				<div class="col-md-7 animate-box">
@@ -146,8 +145,8 @@
 							be pressured into unhealthy dieting to fit in social-standard beauty and feel guilty and self-disgusted 
 							after eating a normal portion of food for people their age.  </p>
 					</blockquote>
-					<p> We find this is a common problem that people around us just to different extents. The first step of healing is always 
-						to recognize the problem. Thus, keeping a diary about food and your feelings will make eating more like a meaningful 
+					<p> The first step of healing is always to recognize the problem. 
+						Thus, keeping a diary about food and your feelings will make eating more like a meaningful 
 						process instead of an inner tug of war.  </p>
 				</div>
 			</div>
