--- a/blog.html
+++ b/blog.html
@@ -74,9 +74,9 @@
 						<div class="blog-text">
 
 							<h3><a href="#">Today</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>How was your day?</p>
 							<ul class="stuff">
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="#">Expand<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
@@ -87,9 +87,9 @@
 						<div class="blog-text">
 
 							<h3><a href="#">Yesterday</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Yesterday was a past and why not have a look at the past self of yours</p>
 							<ul class="stuff">
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="#">Expand<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
@@ -100,9 +100,9 @@
 						<div class="blog-text">
 
 							<h3><a href="#">Tomorrow</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>Tomorrow is a new day and hope you have a great day!</p>
 							<ul class="stuff">
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="#">Expand<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
@@ -113,9 +113,9 @@
 						<div class="blog-text">
 
 							<h3><a href="#">A week</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<p>A long week? See your feelings and view how you had been feeling this whole week.</p>
 							<ul class="stuff">
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="#">Share<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
@@ -153,4 +153,6 @@
 
 	</body>
 </html>
+
+
 
