--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Food</h2>
 					<p>What you had in a day?.</p>
+                    
 				</div>
 			</div>
 			<div class="row">
@@ -107,8 +108,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Join Us</h2>
-					<p>Head out to login page and get started</p>
+					<h2>Our inspiration</h2>
+					<p>The idea started from the experience of only having an apple for breakfast and thinking that would hold me till the end of afternoon lectures, ending up being hungry and could not concentrate on the task. Such a misjudgment of myself of how much food I should eat inspired the idea of keeping a record of what you ate and how that made you feel. Then this reminded one of the team members of the  personal experiences of suffering from eating disorders during teenagehood. Eating disorders usually occur to avoid solving the actual causes of anxiety. Teenage girls can easily be pressured into unhealthy dieting to fit in social-standard beauty and feel guilty and self-disgusted after eating a normal portion of food for people their age. We find this is a common problem that people around us just to different extents. The first step of healing is always to recognize the problem. Thus, keeping a diary about food and your feelings will make eating more like a meaningful process instead of an inner tug of war. </p>
 					<p><a href="#" class="btn btn-default btn-lg">Take Care</a></p>
 				</div>
 			</div>
@@ -135,4 +136,5 @@
 
 	</body>
 </html>
+
 
